--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>beringas music</title>
+    <link rel="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">" 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,6 +18,16 @@
     <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/aizfrBxzFl0?si=BUxtIsS0f_EpMpbZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
+</section>
     
+<section class="categoria">
+    <h2> recomendado para voce </h2>
+    <div class="categoria-videos">
+        <a href="https://www.youtube.com/watch?v=DqmAO_Wpx_Q">
+            <img src="https://img.youtube.com/vi/LINK_AQUI/maxresdefault.jpg"
+        </a>
+    </div>
+</section>
+
 </body>
 </html>
