--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2> recomendado para voce </h2>
     <div class="categoria-videos">
         <a href="https://www.youtube.com/watch?v=DqmAO_Wpx_Q">
-            <img src="https://img.youtube.com/vi/LINK_AQUI/maxresdefault.jpg"
+            <img src="https://img.youtube.com/vi/DqmAO_Wpx_Q axresdefault.jpg"
         </a>
     </div>
 </section>
