--- a/index.html
+++ b/index.html
@@ -24,9 +24,26 @@
     <h2> recomendado para voce </h2>
     <div class="categoria-videos">
         <a href="https://www.youtube.com/watch?v=DqmAO_Wpx_Q">
-            <img src="https://img.youtube.com/vi/DqmAO_Wpx_Q axresdefault.jpg"
+            <img src="https://img.youtube.com/vi/DqmAO_Wpx_Q"
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=YF9iMuLGbW4">
+            <img src="https://img.youtube.com/vi/YF9iMuLGbW4"
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=WV0Re7eD2Sw">
+            <img src="https://img.youtube.com/vi/WV0Re7eD2Sw"
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=9pd7fjp80eQ">
+            <img src="https://img.youtube.com/vi/9pd7fjp80eQ"
+        </a>
+
+        <a href="https://www.youtube.com/watch?v=rmGV-w63wy0">
+            <img src="https://img.youtube.com/vi/rmGV-w63wy0"
         </a>
     </div>
+
 </section>
 
 </body>
